// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas al componente <GifExperApp /> Debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Bayern"
      key="Bayern"
    />
    <GifGrid
      category="Dortmund"
      key="Dortmund"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas al componente <GifExperApp /> Se debe de mostrar correctamete el componente 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
